tests/ui/parse_key.stderr
error: no field `s` on type `&'static str`
  --> $DIR/parse_key.rs:13:16
   |
13 |     tjson!({ "".s : true });
   |                ^

error: aborting due to previous error

